--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@ width: 100%;
 height: 15vh;
 box-shadow:0 0 10px 0 #000000;
 display: flex;
+
 }
 #Logo-cineon{
     height: 15.2vh;
@@ -51,7 +52,7 @@ p{
 }
 #btn-pesquisa{
     width: 5vw;
-    height: 6vh;
+    height: 5vh;
     background-color: transparent;
     border-radius: 10px;
     text-decoration: none;
@@ -68,8 +69,8 @@ p{
 }
 #input-buscar-filme{
     border: 1px solid #000000;
-    width: 15vw;
-    height: 6vh;
+    width: 20vw;
+    height: 5vh;
     border-radius: 10px;
     
 }
@@ -78,7 +79,7 @@ p{
 }
 .d-flex{
     margin-top: 2%;
-    margin-left: 13%;
+    margin-left: 10%;
 }
 button .btn-fav {
     width: 2vw;
@@ -158,4 +159,11 @@ button .btn-fav {
     color: #000000;
     border:solid #000000 1px; 
     background-color: #ffffff;
+}
+.btnDetalhesFilme{
+    color: #ffffff;
+    background-color: #000000;
+    margin-top: 1%;
+    border-radius: 10px;
+    height: 5vh;
 }
