--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&display=swap');  
+#menu{
+   background-color: #646464;
+}
 header{
 background-color: #000000;
 width: 100%;
 height: 15vh;
 box-shadow:0 0 10px 0 #000000;
 display: flex;
-
+}
+html{
+    background-color: #646464;
 }
 #Logo-cineon{
     height: 15.2vh;
@@ -15,7 +20,6 @@ display: flex;
 }
 section{
     background-color: #646464;
-    min-height: 100%;
 }
 img{
     width: 100%;
@@ -72,7 +76,6 @@ p{
     width: 20vw;
     height: 5vh;
     border-radius: 10px;
-    
 }
 #input-buscar-filme::placeholder{
     color: #000000;
@@ -93,10 +96,17 @@ button .btn-fav {
     background-color: #1b1b1b;
     border-radius: 0 0 10px 10px;
 }
-.card-ing-topz {
+.card-detalhes{
+    width:100% ;
+    height: 100%;
+    background-color: #ff0000;
+    border-radius: 10px 10px;
+}
+.card-ing-top {
     width:100% ;
     height: 70%;
     border-radius: 10px 10px 0 0;
+    
 }
 .card{
     flex-direction: row;
@@ -119,7 +129,7 @@ button .btn-fav {
     display: flex;
     flex-wrap:wrap ;
     justify-content: center;
-    background-color: #000000;
+    height: 100%;
 }
 .btn.btn-outline-home{
     color: #ffffff;
@@ -128,6 +138,7 @@ button .btn-fav {
     border:solid #ffffff 1px; 
     margin-top:2%;
     margin-left: 9%;
+    box-shadow: 2px 2px;
 }
 .btn.btn-outline-home:hover{
     color: #000000;
@@ -141,6 +152,7 @@ button .btn-fav {
     border: 1px solid #ffffff;
     margin-top:2%;
     margin-left: 1%;
+    box-shadow: 2px 2px;
 }
 .btn.btn-outline-favoritos:hover{
     color: #000000;
@@ -154,6 +166,7 @@ button .btn-fav {
     height: 6vh;
     margin-top:20%;
     margin-left: 5%;
+    box-shadow: 2px 2px;    
 }
 .btn.genero:hover{
     color: #000000;
@@ -166,4 +179,43 @@ button .btn-fav {
     margin-top: 1%;
     border-radius: 10px;
     height: 5vh;
+    border:solid 1px #ffffff;
+    margin-top: 50px;
+    box-shadow: 2px 2px;
+}
+.btnDetalhesFilme:hover{
+    color: #000000;
+    background-color: #ffffff;
+    border: solid 2px #000000;
+}
+.card-informacoes{
+ font-size: 1rem;
+ display: block;
+ width: 80%;
+ color: #ffffff;
+
+}
+.card2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:70%;
+    height: 50%;
+    margin: 10px;
+    margin-top: 20px;
+}
+#mostrar-filme {
+    display: flex;
+    justify-content: center;
+
+}
+.informacoes{
+
+}
+h2.card-informacoes{
+    font-size: 3rem;
+    margin-left: 30px;
+}
+img.card-img{
+    width: 50%;
 }
