--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,7 +106,6 @@ button .btn-fav {
     width:100% ;
     height: 70%;
     border-radius: 10px 10px 0 0;
-    
 }
 .card{
     flex-direction: row;
@@ -219,3 +218,30 @@ h2.card-informacoes{
 img.card-img{
     width: 50%;
 }
+.btn-4 {
+    border: 1px solid;
+    overflow: hidden;
+    position: relative;
+  }
+  .btn-4 span {
+    z-index: 20;
+  }
+  .btn-4:after {
+    background: #fff;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: 0.2;
+    position: absolute;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
+    z-index: -10;
+  }
+  
+  .btn-4:hover:after {
+    left: 120%;
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  
