--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,7 +63,7 @@ p{
     color: #ffffff;
     border: 1px solid #ffffff;
     font-family: 'Roboto Condensed', sans-serif;
-    margin-left: 1%;
+    margin-left: 2%;
 }
 #btn-pesquisa:hover{
     color: #000000;
@@ -83,6 +83,7 @@ p{
 .d-flex{
     margin-top: 2%;
     margin-left: 10%;
+    margin-right: 5%;
 }
 button .btn-fav {
     width: 2vw;
@@ -108,14 +109,14 @@ button .btn-fav {
     border-radius: 10px 10px 0 0;
 }
 .card{
-    flex-direction: row;
-    width: 20%;    
+    flex-direction: column;
+    width: 18%;    
     height: 50%;
     max-width: 20%;
     min-width: 10%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: #1E1E1E;
     border-radius: 15px;
     color: #ffffff;
@@ -123,10 +124,12 @@ button .btn-fav {
     border-radius: 10px; 
     font-family: 'Roboto Condensed', sans-serif;
     border: none;
+    margin: 5px;
 }
 #lista-filmes{
     display: flex;
-    flex-wrap:wrap ;
+    flex-wrap:wrap;
+    width: 100%;
     justify-content: center;
     height: 100%;
 }
@@ -208,9 +211,6 @@ button .btn-fav {
     justify-content: center;
 
 }
-.informacoes{
-
-}
 h2.card-informacoes{
     font-size: 3rem;
     margin-left: 30px;
@@ -243,5 +243,171 @@ img.card-img{
   .btn-4:hover:after {
     left: 120%;
     transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+
+  #btnFechar{
+    color: #ffffff;
+    background-color: #6e0505;
+    margin-top: 1%;
+    border-radius: 10px;
+    height: 5vh;
+    border:solid 1px #000000;
+    margin-top: 50px;
+    box-shadow: 2px 2px;
+  }
+#btnFechar:hover{
+    color: #ffffff;
+    background-color: #270000;
+    border: solid 2px #000000;
+}
+#btnSalvar{
+    color: #ffffff;
+    background-color: #6e0505;
+    margin-top: 1%;
+    border-radius: 10px;
+    height: 5vh;
+    border:solid 1px #000000;
+    margin-top: 50px;
+    box-shadow: 2px 2px;
+  }
+#btnSalvar:hover{
+    color: #ffffff;
+    background-color: #270000;
+    border: solid 2px #000000;
+}
+#btnLimparFavoritos{
+    color: #ffffff;
+    background-color: #6e0505;
+    margin-top: 1%;
+    border-radius: 10px;
+    height: 5vh;
+    border:solid 1px #000000;
+    margin-top: 50px;
+    box-shadow: 2px 2px;
+}
+#btnLimparFavoritos:hover{
+    color: #ffffff;
+    background-color: #270000;
+    border: solid 2px #000000;
+}
+
+ 
+  @media(max-width: 970px){
+    #btn-pesquisa{
+        width: 8vw;
+        height: 5vh;
+        background-color: transparent;
+        border-radius: 10px;
+        text-decoration: none;
+        color: #ffffff;
+        border: 1px solid #ffffff;
+        font-family: 'Roboto Condensed', sans-serif;
+        margin-left: 2%;
+        margin-top: 15%;
+    }
+    #input-buscar-filme{
+        border: 1px solid #000000;
+        width: 20vw;
+        height: 5vh;
+        border-radius: 10px;
+        margin-top: 15%;
+    }
+    .btn.btn-outline-favoritos{
+        color: #ffffff;
+        width: 10vw;
+        height: 5vh;
+        border: 1px solid #ffffff;
+        margin-top: 6%;
+        margin-left: 2%;
+        box-shadow: 2px 2px;
+    }
+    .btn.btn-outline-favoritos:hover{
+        color: #000000;
+        border:solid #000000 1px; 
+        background-color: #ffffff;
+    }
+    .btn.btn-outline-home{
+        color: #ffffff;
+        width: 10vw;
+        height: 5vh;
+        border:solid #ffffff 1px; 
+        margin-top:6%;
+        margin-left: 10%;
+        box-shadow: 2px 2px;
+    }
+    .btn.btn-outline-home:hover{
+        color: #000000;
+        border:solid #000000 1px; 
+        background-color: #ffffff;
+    }
+    .btn.genero{
+        color: #ffffff;
+        border:solid #ffffff 1px; 
+        width: 10vw;
+        height: 5vh;
+        margin-top:20%;
+        margin-left: 10%;
+        box-shadow: 2px 2px;  
+        margin-top: 60%;  
+    }
+    .btn.genero:hover{
+        color: #000000;
+        border:solid #000000 1px; 
+        background-color: #ffffff;
+    }
+  }
+  @media(max-width:855px){
+    .card{
+        flex-direction: column;
+        width: 20%;    
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #1E1E1E;
+        border-radius: 15px;
+        color: #ffffff;
+        font-size: 12pt;
+        border-radius: 10px; 
+        font-family: 'Roboto Condensed', sans-serif;
+        border: none;
+        margin: 5px;
+    }
+    .card-body{
+        width:100% ;
+        height: 100%;
+        background-color: #1b1b1b;
+        border-radius: 0 0 10px 10px;
+    }
+    .card-detalhes{
+        width:100% ;
+        height: 100%;
+        background-color: #ff0000;
+        border-radius: 10px 10px;
+    }
+    .card-ing-top {
+        width:100% ;
+        height: 70%;
+        border-radius: 10px 10px 0 0;
+    }
+    .card{
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #1E1E1E;
+        border-radius: 15px;
+        color: #ffffff;
+        border-radius: 10px; 
+        font-family: 'Roboto Condensed', sans-serif;
+        border: none;
+    }
+    #lista-filmes{
+        display: flex;
+        flex-wrap:wrap;
+        height: 100%;
+
+    }
+
   }
   
